--- a/src/style.css
+++ b/src/style.css
@@ -23,3 +23,99 @@ button {
     display: block;
     padding: 5px;
 }
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+}
+
+aside {
+    background-color: lightgrey;
+    min-height: 700px;
+    padding: 10px;
+}
+
+aside a {
+    display: block;
+    width: 60px;
+    margin-bottom: 5px;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+aside a:hover {
+    background-color: #555;
+    color: white;
+}
+
+main {
+    padding: 30px;
+}
+
+
+main a {
+    margin-bottom: 50px;
+    width: 60px;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: black;
+   
+    
+
+}
+
+main a:hover{
+    background-color: #555;
+    color: white;
+}
+
+table, th, td {
+    border: 2px solid #000;
+    margin-top: 10px;
+    border-collapse: collapse;
+    
+  }
+
+  body {
+    margin: 0px;
+}
+
+.grid-2 {
+     
+
+    
+}
+
+
+
+
+.logo{
+    float: left;
+}
+
+.nav {
+    background-color: lightslategray;
+    overflow: hidden;
+  }
+  
+  .topnav a {
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  .topnav a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+
+  
