--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,14 @@
-#login-form{
-    position: relative;  top: 20px;
-      padding: 30px;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: rgb(114, 204, 240);
-  
-  
-  }
+#login-form {
+    position: relative;
+    top: 20px;
+    padding: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: rgb(114, 204, 240);
 
-  label {
+
+}
+
+label {
     display: block;
     padding: 5px;
 }
@@ -60,12 +61,12 @@ main a {
     color: #000;
     padding: 3px 20px;
     text-decoration: black;
-   
-    
+
+
 
 }
 
-main a:hover{
+main a:hover {
     background-color: #555;
     color: white;
 }
@@ -76,91 +77,75 @@ main a:hover{
     border-collapse: collapse;
     margin: 25px 0;
     font-size: 0.9em;
-    min-width: 400px; 
+    min-width: 400px;
     border-radius: 5px 5px 0 0;
-    }
+}
 
-    .content-table thead tr {
+.content-table thead tr {
     background-color: #009879;
     color: #ffffff;
     text-align: left;
     font-weight: bold;
-    }
-    .content-table th,
-    .content-table td {
-    padding: 12px 15px;
-    }
-
-    .content-table tbody tr {
-        border-bottom: 1px solid #dddddd;
-        } I
-      
-        .content-table tbody tr:last-of-type {
-        border-bottom: 2px solid #009879;
-        }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.edit {
-    border:none;
 }
 
-  body {
+.content-table th,
+.content-table td {
+    padding: 12px 15px;
+}
+
+.content-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+I .content-table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
+}
+
+.edit {
+    border: none;
+}
+
+body {
     margin: 0px;
 }
 
-.grid-2 {
-     
-
-    
-}
-
-
-
-
-.logo{
+.logo {
     float: left;
 }
 
 .nav {
     background-color: lightslategray;
     overflow: hidden;
-  }
-  
-  .topnav a {
+}
+
+.topnav a {
     float: right;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
-  }
-  
-  .topnav a:hover {
+}
+
+.topnav a:hover {
     background-color: #ddd;
     color: black;
-  }
-  
-  .topnav a.active {
+}
+
+.topnav a.active {
     background-color: #04AA6D;
     color: white;
-  }
+}
 
-  
+.logo {
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    font-weight: 200;
+    
+    
+    
+    
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}   
