--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,19 @@
+* {
+    margin: 0px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+/* ------------------------- Index Page ------------------ */
 #login-form {
     position: relative;
     top: 20px;
     padding: 30px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: rgb(114, 204, 240);
-
-
 }
 
+
+/* ------------------------- Form Control General -------------------- */
 label {
     display: block;
     padding: 5px;
@@ -105,15 +111,12 @@ I .content-table tbody tr:last-of-type {
     border: none;
 }
 
-body {
-    margin: 0px;
-}
-
 .logo {
     float: left;
 }
 
 .nav {
+
     background-color: lightslategray;
     overflow: hidden;
 }
@@ -137,15 +140,58 @@ body {
     color: white;
 }
 
-.logo {
+
+/* ---------------------- Layout -------------------------------------- */
+.container {
+    display: grid;
+    grid-template-rows: 50px auto;
+}
+
+.topnav {
+    background-color: gray;
+}
+
+.sub-container {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
+}
+
+.sidenav {}
+
+.main {
+    display: grid;
+    grid-template-rows: auto 50px;
+}
+
+
+
+/*----------------------profile table----------------------*/
+
+.profile-table {
+display:grid;
+    width: 100%;
+    border-collapse: collapse;
+    
+}
+
+.profile-table td,
+.profile-table th {
+    padding: 12px 15px;
+    border: 1px solid #ddd;
     text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    font-weight: 200;
-    
-    
-    
-    
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-}   
+    font-size: 16px;
+}
+
+.profile-table th {
+    background-color: darkblue;
+    color: #ffffff;
+}
+
+
+.profile-table tbody tr:nth-child(even) {
+    background-color: #f5f5f5;
+}
+
+
+
+
