--- a/src/style.css
+++ b/src/style.css
@@ -3,14 +3,119 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/* ------------------------- Index Page ------------------ */
-#login-form {
-    position: relative;
-    top: 20px;
-    padding: 30px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: rgb(114, 204, 240);
+.logo img {
+
+    height: 65px;
+    position: absolute;
+    margin: -7px;
+    margin-left: 5px;
+
+
 }
+
+/* ------------------------- Index Page ------------------ */
+
+
+body,
+html {
+    height: 100%;
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
+
+.background {
+
+    width: 100%;
+    height: 100%;
+
+
+}
+
+.background img {
+    width: 100%;
+    height: 100%;
+}
+
+.grid-2 {
+
+    height: 100%;
+
+}
+
+.grid2 {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    height: 100%;
+    position: absolute;
+    top: 150px;
+    left: 300px;
+
+}
+
+
+.right-col {
+    margin: 0 20px;
+    display: flex;
+
+    flex-direction: column;
+
+    box-sizing: border-box;
+}
+
+#login-form {
+    text-align: center;
+    max-width: 300px;
+    width: 100%;
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+    color: #333;
+}
+
+label {
+    display: block;
+    text-align: left;
+    /* margin: 10px 0 5px; */
+    color: #555;
+}
+
+input {
+    width: calc(100% - 20px);
+    padding: 8px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+button {
+    /* width: calc(100% - 20px); */
+    padding: 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1em;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+.error-message {
+    color: brown;
+    font-size: 0.9em;
+    margin-top: 10px;
+}
+
 
 
 /* ------------------------- Form Control General -------------------- */
@@ -25,6 +130,22 @@ input {
     margin-bottom: 10px;
     width: 100%;
 }
+
+.form-col-2 {
+    display: flex;
+    flex-grow: 1;
+    justify-content: space-between;
+}
+
+.left-col,
+.right-col {
+    width: 50%;
+}
+
+form {
+    width: 100%;
+}
+
 
 button {
     display: block;
@@ -52,8 +173,8 @@ aside a {
 }
 
 aside a:hover {
-    background-color: #555;
-    color: white;
+    background-color: #04AA6D;
+    color: black;
 }
 
 main {
@@ -65,16 +186,17 @@ main a {
     margin-bottom: 50px;
     width: 60px;
     color: #000;
-    padding: 3px 20px;
+    padding: 2px 6px;
     text-decoration: black;
-
+    border: #04AA6D solid 1px;
+    border-radius: 5px;
 
 
 }
 
 main a:hover {
-    background-color: #555;
-    color: white;
+    background-color: #04AA6D;
+    color: black;
 }
 
 
@@ -88,7 +210,7 @@ main a:hover {
 }
 
 .content-table thead tr {
-    background-color: #009879;
+    background-color: #04AA6D;
     color: #ffffff;
     text-align: left;
     font-weight: bold;
@@ -104,12 +226,13 @@ main a:hover {
 }
 
 I .content-table tbody tr:last-of-type {
-    border-bottom: 2px solid #009879;
+    border-bottom: 2px solid #04AA6D;
 }
 
 .edit {
     border: none;
 }
+/* -------------------------navbar----------------------------------- */
 
 .logo {
     float: left;
@@ -131,7 +254,7 @@ I .content-table tbody tr:last-of-type {
 }
 
 .topnav a:hover {
-    background-color: #ddd;
+    background-color: #04AA6D;
     color: black;
 }
 
@@ -213,31 +336,58 @@ I .content-table tbody tr:last-of-type {
 /* ----------------------Dashboard--------------------------- */
 .card-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
 }
 
 .card {
-    background-color: burlywood;
+    background-color: #E2F5F5;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
+    overflow: hidden;
+    transition: transform 0.2s;
+    font-family: 'Arial', sans-serif;
+}
+
+.card:hover {
+    transform: translateY(-5px);
 }
 
 .card-title {
-    background-color: #007bff;
-    color: white;
     padding: 10px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    border-bottom: 1px solid #a49d9d;
+    font-size: 1.2rem;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+}
+
+.card-title img {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-right: 10px;
+    width: 26px;
+
 }
 
 .card-body {
     padding: 10px;
     min-height: 100px;
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.card-body p {
+    margin: 0;
+    color: #555;
 }
 
 
-.form-col-2 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 50px;
+
+.card:nth-child(odd) {
+    background-color: #E2F5F5;
+}
+
+.card:nth-child(even) {
+    background-color: #E1EFFB;
 }
