Finish book return module Fixes #25

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,12 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+h1{
+    margin-left: 0%;
+    text-align: center;
+    margin-top: auto;
+}
+
 .logo img {
 
     height: 65px;
